--- a/app/views/apps.scala.html
+++ b/app/views/apps.scala.html
@@ -1,4 +1,4 @@
-@(email: String, resapp: List[org.cloudfoundry.client.lib.CloudApplication])
+@(resapp: List[org.cloudfoundry.client.lib.CloudApplication])
 
 @import helper._
 @import org.cloudfoundry.client.lib.CloudApplication
@@ -10,7 +10,6 @@
 <center>
 
 <h2>Welcome to cloud foundry</h2>
-<h4>Email is : <span id="emailid">@email</span></h4> 
 <br>
 <br>
 
