--- a/app/views/apps.scala.html
+++ b/app/views/apps.scala.html
@@ -4,8 +4,8 @@
 @import org.cloudfoundry.client.lib.CloudApplication
 @import org.cloudfoundry.client.lib.CloudFoundryClient
 @main("") {
- <p id="logout" class="buttons" align="right">
-      <a href="@routes.Application.logout">Log Out</a>
+ <p class="buttons" align="right">
+      <a id="logout" href="@routes.Application.logout">Log Out</a>
  </p>
 <center>
 
