--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -2,8 +2,8 @@
 @main(""){
 <body onload="timer()">
 <br>
-<div align="right"><a href="@routes.Application.logout">Log Out</a></div>
-<div align="left"> <a href="@routes.Application.showApps">Back to Applications</a></div>
+<div align="right"><a id="logout" href="@routes.Application.logout">Log Out</a></div>
+<div align="left"> <a id="apps" href="@routes.Application.showApps">Back to Applications</a></div>
 <h4 align="center"> Logs For <span id="appname">@appName</span>: </h4>
 
 <div style="width:100%; height:100%;">
