--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -51,7 +51,7 @@ function end2()
 function end1()
 {
 	var log = document.getElementById("log1");
-	log.scrollHeight = log.scrollTop;
+	log.scrollTop = log.scrollHeight;
 }
 </script>
 </body>
