--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -10,8 +10,7 @@
 
 <div style="width:100%; height:50%;">
 <span id="stderr">Standard Error Logs</span>
-<input type="checkbox" name="scrollLog1" value="scrollLog1" onclick="if(this.checked){end1()}">Go to the end of log</br>
-<br>
+<input type="checkbox" name="scrollLog1" value="scrollLog1" onclick="if(this.checked){end(1)}">Go to the end of log</br>
 <pre>
 <textarea readonly="readonly" rows="20" cols="200" id="log1" name="log1">
 @file1
@@ -21,8 +20,7 @@
 
 <div style="width:100%; height:50%;">
 <span id="stdout">Standard Output Logs</span>
-<input type="checkbox" name="scrollLog2" value="scrollLog2" onclick="if(this.checked){end2()}">Go to the end of log</br>
-<br>
+<input type="checkbox" name="scrollLog2" value="scrollLog2" onclick="if(this.checked){end(2)}">Go to the end of log</br>
 <pre>
 <textarea readonly="readonly" rows="20" cols="200" id="log2" name="log2">
 @file2
@@ -37,21 +35,14 @@ function timer()
 {
 setInterval(function(){updateLogs()},10000);
 }
-
 function updateLogs()
 {
 	window.location = "@routes.Application.showLogs(appName)" 
 }
-
-function end2()
+function end(id)
 {
-	var log = document.getElementById("log2");
+	var log = document.getElementById("log"+id);
 	log.scrollTop = log.scrollHeight;
-}
-function end1()
-{
-	var log = document.getElementById("log1");
-	log.scrollHeight = log.scrollTop;
 }
 </script>
 </body>
