--- a/app/views/apps.scala.html
+++ b/app/views/apps.scala.html
@@ -13,11 +13,10 @@
 <br>
 <br>
 
-@{if(resapp.isEmpty){
+@if(resapp.isEmpty){
 <h3>  <a href="www.cloudfoundry.com"> No Applications Deployed Yet.
 Create and deploy your applications on in seconds !!</a>  
 </h3>
-}
 }
 <table border="1" id="tableapps">
 <tr>
