--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -1,6 +1,45 @@
-@(file1:String, file2:String, appName:String)
+@(token:String, appName:String)
+
 @main(""){
-<body onload="timer()">
+
+<script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"> </script>
+
+<script type="text/javascript">
+$(document).ready(callLogs());
+
+function callLogs(){
+	getLogs();
+	updateLogs();
+}
+
+function getLogs(){	
+getLog('Stderr');
+getLog('Stdout');
+}
+
+function getLog(logType)
+{
+	$.get("/getLog?appName=@appName&logType="+logType,
+		function(fetchLog){
+			$("#log"+logType).html(fetchLog);
+			},
+		"html"
+		);
+}
+	
+function updateLogs() {
+	setInterval(function(){getLogs()},10000)	
+}
+
+function end(id)
+{
+	var log = document.getElementById("log"+id);
+	log.scrollTop = log.scrollHeight;
+}
+
+</script>
+
+<body>
 <br>
 <div align="right"><a id="logout" href="@routes.Application.logout">Log Out</a></div>
 <div align="left"> <a id="apps" href="@routes.Application.showApps">Back to Applications</a></div>
@@ -8,42 +47,28 @@
 
 <div style="width:100%; height:100%;">
 
-<div style="width:100%; height:50%;">
-<span id="stderr">Standard Error Logs</span>
-<input type="checkbox" name="scrollLog1" value="scrollLog1" onclick="if(this.checked){end(1)}">Go to the end of log</br>
+<div style="width:100%; height:40%;">
+<span id="stderr">Standard Error Logs</span> <br>
+<input type="checkbox" name="scrollLog1" value="scrollLog1" onclick="if(this.checked){end('Stderr')}">Go to the end of log</br>
 <pre>
-<textarea readonly="readonly" rows="20" cols="200" id="log1" name="log1">
-@file1
+<textarea readonly="readonly" rows="15" cols="200" id="logStderr" name="logStderr">
+
+</textarea>
+</pre>
+</div>
+<br>
+<div style="width:100%; height:50%;">
+<span id="stdout">Standard Output Logs</span> <br>
+<input type="checkbox" name="scrollLog2" value="scrollLog2" onclick="if(this.checked){end('Stdout')}">Go to the end of log</br>
+
+<pre>
+<textarea readonly="readonly" rows="15" cols="200" id="logStdout" name="logStdout">
+
 </textarea>
 </pre>
 </div>
 
-<div style="width:100%; height:50%;">
-<span id="stdout">Standard Output Logs</span>
-<input type="checkbox" name="scrollLog2" value="scrollLog2" onclick="if(this.checked){end(2)}">Go to the end of log</br>
-<pre>
-<textarea readonly="readonly" rows="20" cols="200" id="log2" name="log2">
-@file2
-</textarea>
-</pre>
 </div>
 
-</div>
-
-<script type="text/javascript">
-function timer()
-{
-setInterval(function(){updateLogs()},10000);
-}
-function updateLogs()
-{
-	window.location = "@routes.Application.showLogs(appName)" 
-}
-function end(id)
-{
-	var log = document.getElementById("log"+id);
-	log.scrollTop = log.scrollHeight;
-}
-</script>
 </body>
  }  
