--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -3,6 +3,7 @@
 @import helper._
 
 @main("login") {	
+	<img src="@routes.Assets.at("images/logo_header_cloudfoundry.png")"/>
 	<center>		
     @form(action = routes.Application.checkLogin) {
 		<br>
