--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -1,6 +1,19 @@
 @(appName:String)
 
 @main(""){
+<center>
+ <p class="buttons" align="center">
+	<link rel="stylesheet" href="@routes.Assets.at("stylesheets/menu.css")" type="text/css" /><style>._css3m{display:none}</style>
+<body style="background-color:#EBEBEB">
+
+<ul id="css3menu1" class="topmenu">
+	<li class="topfirst"><a id="apps" href="@routes.Application.showApps" style="height:17px;line-height:17px;"> My Apps </a></li>
+	<li class="topmenu"><a id="info" href="@routes.Application.getInfo" style="height:17px;line-height:17px;"><span> My Usage </span></a>
+	<li class="toplast"><a id="logout" href="@routes.Application.logout" style="height:17px;line-height:17px;"> Logout </a></li>
+</ul>
+</body>     
+ </p>
+</center>
 
 <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"> </script>
 
@@ -28,7 +41,9 @@ function getLog(logType)
 }
 	
 function updateLogs() {
-	setInterval(function(){getLogs()},10000)	
+	$("#log-stderr").fadeIn(100).fadeOut(100).fadeIn(100).fadeOut(100);
+	setInterval(function(){getLogs()},10000);	
+	
 }
 
 function end(id)
@@ -37,13 +52,18 @@ function end(id)
 	log.scrollTop = log.scrollHeight;
 }
 
+$.fn.animateHighlight = function(highlightColor, duration) {
+    var highlightBg = highlightColor || "#FFFF9C";
+    var animateMs = duration || 1500;
+    var originalBg = "#FFFFFF";
+    this.stop().css(originalBg, highlightBg).animate({backgroundColor: originalBg}, animateMs);
+};
+
 </script>
 
 <body>
-<br>
-<div align="right"><a id="logout" href="@routes.Application.logout">Log Out</a></div>
-<div align="left"> <a id="apps" href="@routes.Application.showApps">Back to Applications</a></div>
-<h4 align="center"> Logs For <span id="appname">@appName</span>: </h4>
+<font color="#087cbb"> <h3 align="center"> Logs For <span id="appname">@appName</span>: </h3> </font>
+
 
 <div style="width:100%; height:100%;">
 
