--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,3 @@
-body, html { height:100%; padding:0; margin:0;}
+body, html { height:100%; padding:0; margin:0;background-color:#DDDDE0;}
 #stderr, #log-stderr, #log-stderr textarea { height: 50%; }
 #stdout, #log-stdout, #log-stdout textarea { height: 50%; }
