--- a/app/views/info.scala.html
+++ b/app/views/info.scala.html
@@ -3,12 +3,11 @@
 @import helper._
 @import org.cloudfoundry.client.lib.CloudInfo
 
-@main("") {
-<img src="@routes.Assets.at("images/logo_header_cloudfoundry.png")"/>
-<center>
+@main("My Usage") {
 
+<center>
+<img src="@routes.Assets.at("images/logo_header_cloudfoundry.png")"/>
  <p class="buttons" align="center">
-	<link rel="stylesheet" href="@routes.Assets.at("stylesheets/menu.css")" type="text/css" /><style>._css3m{display:none}</style>
 <body style="background-color:#EBEBEB">
 
 <ul id="css3menu1" class="topmenu">
@@ -19,7 +18,6 @@
 </body>     
  </p>
 
-<br>
 <font color="#087cbb"><h3>My Usage</h3>
 
 @infoList.getDescription()
