--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -6,10 +6,11 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/menu.css")" type="text/css" /><style>._css3m{display:none}</style>
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/cfavicon.ico")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
-    <body>
+    <body style="margin-left: 70px; margin-right: 50px;">
         @content
     </body>
 </html>
