--- a/app/views/info.scala.html
+++ b/app/views/info.scala.html
@@ -25,7 +25,7 @@ Welcome @email
 @infoList.getDescription()
 <br>
 <br>
-<table border="1" id="tableinfo" width="400">
+<table id="tableinfo" width="400">
 
 <tr align="center">
 <th width="50%"> Memory </th>
