--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -25,8 +25,8 @@ function getLog(logType)
 			},
 		"html"
 		);	
-	$("#flash1").fadeOut(100).fadeIn(100);
-	$("#flash2").fadeOut(100).fadeIn(100);
+	
+	$("#flash-"+logType).fadeOut(100).fadeIn(100);
 }
 	
 function updateLogs() {
@@ -37,7 +37,7 @@ function updateLogs() {
 function end(id)
 {
 	var log = document.getElementById("log-"+id);
-	log.scrollTop = log.scrollHeight;
+	log.scrollTop = log.scrollHeight ;
 }
 </script>
 
@@ -63,7 +63,7 @@ Welcome @email
 
 <h3 align="center"> Logs For <span id="appname">@appName</span>: </h3> </font>
 <div style="width:100%; height:100%;">
-<div id="flash1" style="width:100%; height:40%;">
+<div id="flash-stderr" style="width:100%; height:40%;">
 <span id="stderr" style="height: 50%; width: 95%;">Standard Error Log</span> <br>
 <input type="checkbox" name="scrollLog1" value="scrollLog1" onclick="if(this.checked){end('stderr')}">Go to the end of log
 </br>
@@ -74,7 +74,7 @@ Welcome @email
 </pre>
 </div>
 <br>
-<div id="flash2" style="width:100%; height:50%;">
+<div id="flash-stdout" style="width:100%; height:50%;">
 <span id="stdout" style="height: 50%; width: 95%;">Standard Output Log</span> <br>
 <input type="checkbox" name="scrollLog2" value="scrollLog2" onclick="if(this.checked){end('stdout')}">Go to the end of log
 </br>
