--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -64,7 +64,7 @@ Welcome @email
 <h3 align="center"> Logs For <span id="appname">@appName</span>: </h3> </font>
 <div style="width:100%; height:100%;">
 <div id="flash-stderr" style="width:100%; height:40%;">
-<span id="stderr" style="height: 50%; width: 95%;">Standard Error Log</span> <br>
+<span id="stderr" style="height: 50%; width: 95%;">Standard Error Log</span> &nbsp; &nbsp; 
 <input type="checkbox" name="scrollLog1" value="scrollLog1" onclick="if(this.checked){end('stderr')}">Go to the end of log
 </br>
 <pre>
@@ -75,7 +75,7 @@ Welcome @email
 </div>
 <br>
 <div id="flash-stdout" style="width:100%; height:50%;">
-<span id="stdout" style="height: 50%; width: 95%;">Standard Output Log</span> <br>
+<span id="stdout" style="height: 50%; width: 95%;">Standard Output Log</span> &nbsp; &nbsp; 
 <input type="checkbox" name="scrollLog2" value="scrollLog2" onclick="if(this.checked){end('stdout')}">Go to the end of log
 </br>
 <pre>
