--- a/app/views/logs.scala.html
+++ b/app/views/logs.scala.html
@@ -1,7 +1,5 @@
 @(appName:String, email:String)
 
-@main("My Logs"){
-
 <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"> </script>
 
 <script type="text/javascript">
@@ -41,7 +39,7 @@ function end(id)
 }
 </script>
 
-<body>
+@main("My Logs"){
 <br>
  <font color="#087cbb">
 <span style="margin-left:20px;">
@@ -61,29 +59,32 @@ Welcome @email
  </p>
  <center>
 
-<h3 align="center"> Logs For <span id="appname">@appName</span>: </h3> </font>
-<div style="width:100%; height:100%;">
+<h3 align="center"> Logs For <span id="appname">@appName</span>: </h3> 
+<div style="width:100%; height:80%;">
 <div id="flash-stderr" style="width:100%; height:40%;">
-<span id="stderr" style="height: 50%; width: 95%;">Standard Error Log</span> &nbsp; &nbsp; 
+<span id="stderr">Standard Error Log</span> &nbsp; &nbsp; 
 <input type="checkbox" name="scrollLog1" value="scrollLog1" onclick="if(this.checked){end('stderr')}">Go to the end of log
 </br>
 <pre>
-<textarea readonly="readonly" rows="15" cols="200" id="log-stderr" name="log-stderr" style="height: 50%; width: 95%; resize:none">
+<textarea readonly="readonly" id="log-stderr" name="log-stderr" rows="15" style="width:90%; height:90%; resize:none; 
+-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;">
 
 </textarea>
 </pre>
 </div>
-<br>
-<div id="flash-stdout" style="width:100%; height:50%;">
-<span id="stdout" style="height: 50%; width: 95%;">Standard Output Log</span> &nbsp; &nbsp; 
+
+<div id="flash-stdout" style="width:100%; height:40%;"> <br><br>
+<span id="stdout">Standard Output Log</span> &nbsp; &nbsp; 
 <input type="checkbox" name="scrollLog2" value="scrollLog2" onclick="if(this.checked){end('stdout')}">Go to the end of log
 </br>
 <pre>
-<textarea readonly="readonly" rows="15" cols="200" id="log-stdout" name="log-stdout" style="height: 50%; width: 95%; resize:none">
+<textarea readonly="readonly" id="log-stdout" name="log-stdout" rows="15" style="width:90%; height:90%; resize:none;
+-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;">
 
 </textarea>
 </pre>
 </div>
 </div>
-</body>
+</font>
+
  }  
