--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,7 +10,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/cfavicon.ico")">
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
-    <body style="height:95%; margin-left: 70px; margin-right: 50px; margin-right: 20px; overflow:auto">
+    <body style="height:95%; margin-left: 70px; margin-right: 50px; overflow:auto">
         @content
     </body>
 </html>
