--- a/app/views/apps.scala.html
+++ b/app/views/apps.scala.html
@@ -50,7 +50,7 @@ For Cloud Controller : @cloudUrl
 <td width="12%">@app.getMemory</td>
 <td width="14%">
 <ul id="css3menu1" class="topmenu">
-<li class="toplast"><a id="log-link" href="@routes.Application.showLogs(app.getName)" style="height:1px;line-height:1px;"> View Log</a></li>
+<li class="toplast"><a id="log-link" href="@routes.Application.showLogs(app.getName,app.getRunningInstances)" style="height:1px;line-height:1px;"> View Log</a></li>
 </ul>
 </td> 
 </tr>
